Fixed date numbers, tried to align icons. Still got to align ssearch icon

--- a/MinVakt/src/main/webapp/css/main.css
+++ b/MinVakt/src/main/webapp/css/main.css
@@ -16,10 +16,10 @@ body{
 
 #h1-title{
     color: white;
-    font-size: 56px;
+    font-size: 4rem;
     width:80%;
     float: left;
-    padding: 20px;
+    padding: 25px;
     text-align: center;
     margin: 0 auto 0 auto;
     height: 100%;
@@ -30,21 +30,19 @@ body{
     position: relative;
     width: 10%;
     height: 100%;
+    text-align: center;
+    justify-content: center;
 }
 
 .icon-bar a{
-//display: block;
-  //  float: right;
-// width: 50%;
-    font-size: 40px;
+    font-size: 3.5rem;
     color: white;
-
     background: transparent;
     border-style: none;
-    padding: 30px;
-    width: 100%;
-    height: 100%;
-    margin: 0;
+
+    padding: 2rem;
+    text-align: center;
+    justify-content: center;
 }
 #search{
     float:right;
@@ -70,24 +68,50 @@ body{
     display: inline-block;
     text-decoration: none;
 }
+#hamburger-menu {
+    list-style-type: none;
+    display: none;
+    position: absolute;
+    left: 0; top: 100%;
+    width: 100%;
+    -webkit-padding-start: 0;
+}
+
+#hamburger-menu li {
+    background-color: #3d5176;
+    display: block;
+    float: left;
+    height: 50px;
+    width: 100%;
+    padding-left: 10px;
+    color: white;
+}
+
+#hamburger-menu li:hover {
+    background-color: #4d7196;
+}
+
+.hamburger-menu-open {
+    display: block !important;
+}
+
 .container{
     display: block;
     margin: auto;
     top: 200px;
 }
 h2{
-    padding: 20px;
+    padding: 1.25rem;
     display: block;
     position: relative;
     flex-wrap: wrap;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-top: 200px;
     width: 100%;
     text-align: center;
 }
 .calendar-head{
     posision: relative;
-
 }
 #calendar {
     width: 100%;
@@ -117,7 +141,7 @@ h2{
 
 #calendar ul.weekdays {
     height: 40px;
-    background: #8e352e;
+    background: #6d81a6;
 }
 
 #calendar ul.weekdays li {
@@ -141,11 +165,11 @@ h2{
 #calendar .date {
     text-align: center;
     margin-bottom: 5px;
-    padding: 4px;
+    padding: 1px;
     background: #333;
     color: #fff;
     width: 20px;
-    border-radius: 50%;
+    border-radius: 0.2rem;
     float: right;
 }
 
@@ -222,29 +246,3 @@ footer{
     bottom: 0;
 }
 
-#hamburger-menu {
-    list-style-type: none;
-    display: none;
-    position: absolute;
-    left: 0; top: 100%;
-    width: 100%;
-    -webkit-padding-start: 0;
-}
-
-#hamburger-menu li {
-    background-color: #3d5176;
-    display: block;
-    float: left;
-    height: 50px;
-    width: 100%;
-    padding-left: 10px;
-    color: white;
-}
-
-#hamburger-menu li:hover {
-    background-color: #4d7196;
-}
-
-.hamburger-menu-open {
-    display: block !important;
-}
